fix horizontal scrolling on mobile

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -7,6 +7,7 @@
 body,
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 a {
